--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,3 +4,14 @@ logging:
     org.springframework.web: DEBUG
     guru.springframework.controllers: DEBUG
     org.hibernate: DEBUG
+jpa:
+  show-sql: true
+  generate-ddl: true
+  hibernate:
+    ddl-auto: create
+  database: postgresql
+datasource:
+    #SPRING_DATASOURCE_URL environment variable will be something like -> jdbc:sqlserver://MySqlServer\\MyInstance:1433;DatabaseName=MyDbName;
+    url: jdbc:postgresql://localhost:5432/database/public
+    username: postgres
+    password: postgres
